# OpenZKP

algebra/elliptic-curve/src/: lib.rs
algebra/u256/src/: lib.rs
crypto/elliptic-curve-crypto/src/: lib.rs
crypto/hash/: Cargo.toml
crypto/hash/src/: hash.rs  hashable.rs  lib.rs
crypto/merkle-tree/src/: lib.rs
crypto/stark/examples/pedersen_merkle/: main.rs
crypto/stark/src/: rational_equality.rs  trace_table.rs
utils/criterion-utils/src/: lib.rs
utils/error-utils/src/: lib.rs
utils/macros-decl/src/: lib.rs
utils/macros-impl/src/: lib.rs
utils/macros-lib/src/: lib.rs
